--- a/assets/components/discuss/themes/modx-dev/sass/_forums.sass
+++ b/assets/components/discuss/themes/modx-dev/sass/_forums.sass
@@ -592,6 +592,9 @@ section.group
             display: none
 
 
+#ui-datepicker-div
+    z-index: 30
+
 
 // new thread view
 .twelve-form
